build: update llvm tag to de3f0f7f
Credit to @vivekkhandelwal1 for finding the necessary changes.

Summary of changes:

 - Switch Tosa_IntArrayAttr[N], Tosa_IntArrayAttrUpto[N] to DenseI64ArrayAttr.

 - Replace kNoIterationLimit with kNoLimit. (https://reviews.llvm.org/D140525)

 - Add dependency on MhloPasses when MHLO is enabled

 - Specify result type when using mhlo::DotOp

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -18,7 +18,9 @@ set(linked_libs TorchMLIRTorchToLinalg
                 TorchMLIRTorchConversionToMLProgram
                 TorchMLIRConversionUtils)
 if(TORCH_MLIR_ENABLE_MHLO)
-  list(APPEND linked_libs TorchMLIRTorchToMhlo)
+  list(APPEND linked_libs
+    MhloPasses
+    TorchMLIRTorchToMhlo)
 endif()
 
 add_mlir_library(TorchMLIRConversionPasses
