--- a/test/lit.site.cfg.py.in
+++ b/test/lit.site.cfg.py.in
@@ -17,7 +17,7 @@ config.llvm_exe_ext = "@EXEEXT@"
 config.lit_tools_dir = "@LLVM_LIT_TOOLS_DIR@"
 config.python_executable = "@Python3_EXECUTABLE@"
 config.enable_jit_ir_importer = @TORCH_MLIR_ENABLE_JIT_IR_IMPORTER@
-config.enable_mhlo = @TORCH_MLIR_ENABLE_MHLO@
+config.enable_stablehlo = @TORCH_MLIR_ENABLE_STABLEHLO@
 
 import lit.llvm
 lit.llvm.initialize(lit_config, config)
