--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -2,8 +2,8 @@ add_subdirectory(TorchToLinalg)
 add_subdirectory(TorchToSCF)
 add_subdirectory(TorchToArith)
 add_subdirectory(TorchToTosa)
-if(TORCH_MLIR_ENABLE_MHLO)
-  add_subdirectory(TorchToMhlo)
+if(TORCH_MLIR_ENABLE_STABLEHLO)
+  add_subdirectory(TorchToStablehlo)
 endif()
 add_subdirectory(TorchToTMTensor)
 add_subdirectory(TorchConversionToMLProgram)
@@ -17,10 +17,8 @@ set(linked_libs TorchMLIRTorchToLinalg
                 TorchMLIRTorchToTMTensor
                 TorchMLIRTorchConversionToMLProgram
                 TorchMLIRConversionUtils)
-if(TORCH_MLIR_ENABLE_MHLO)
-  list(APPEND linked_libs
-    MhloPasses
-    TorchMLIRTorchToMhlo)
+if(TORCH_MLIR_ENABLE_STABLEHLO)
+  list(APPEND linked_libs TorchMLIRTorchToStablehlo)
 endif()
 
 add_mlir_library(TorchMLIRConversionPasses
