[Tcp] Add const op

--- a/externals/llvm-external-projects/torch-mlir-dialects/lib/Conversion/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/lib/Conversion/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(linked_libs TorchMLIRConversionUtils)
 
 if(TORCH_MLIR_DIALECTS_ENABLE_TCP)
+  add_subdirectory(TcpToArith)
   add_subdirectory(TcpToLinalg)
+  list(APPEND linked_libs TorchMLIRTcpToArith)
   list(APPEND linked_libs TorchMLIRTcpToLinalg)
 endif()
 
