--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
--r build-requirements.txt
 -r pytorch-requirements.txt
-
-# Test Requirements
-pillow
-dill
-multiprocess
+-r build-requirements.txt
+-r test-requirements.txt
