--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -51,6 +51,11 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+    
+    - name: chown $GITHUB_WORKSPACE
+      run: |
+        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
+    
     - name: Checkout torch-mlir
       uses: actions/checkout@v3
       with:
