--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -337,7 +337,6 @@ cc_library(
     ]),
     hdrs = glob(["include/torch-mlir/Conversion/TorchToLinalg/*.h"]),
     strip_include_prefix = "include",
-
     deps = [
         ":TorchMLIRConversionPassesIncGen",
         ":TorchMLIRConversionUtils",
@@ -450,7 +449,7 @@ cc_library(
         ":TorchMLIRTorchConversionDialect",
         "@llvm-project//mlir:Dialect",
         "@mlir-hlo//:mlir_hlo",
-        "@mlir-hlo//:transforms_passes"
+        "@mlir-hlo//:transforms_passes",
     ],
 )
 
@@ -462,10 +461,10 @@ cc_library(
     hdrs = [
         "include/torch-mlir/Conversion/Passes.h",
     ],
-    strip_include_prefix = "include",
     defines = [
-        "TORCH_MLIR_ENABLE_STABLEHLO"
+        "TORCH_MLIR_ENABLE_STABLEHLO",
     ],
+    strip_include_prefix = "include",
     deps = [
         ":TorchMLIRTorchConversionToMLProgram",
         ":TorchMLIRTorchToArith",
