--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -52,10 +52,12 @@ jobs:
 
     steps:
     
-    - name: chown $GITHUB_WORKSPACE
+    - name: Prepare workspace
       if: ${{ matrix.os-arch == 'ubuntu-x86_64' }}
       run: |
-        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
+        # Clear the workspace directory so that we don't run into errors about
+        # existing lock files.
+        rm -rf $GITHUB_WORKSPACE/*
     
     - name: Checkout torch-mlir
       uses: actions/checkout@v3
