--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -15,11 +15,13 @@ jobs:
     name: Manylinux Build
     runs-on: a100
     steps:
-    
-    - name: chown $GITHUB_WORKSPACE
+
+    - name: Prepare workspace
       run: |
-        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
-        
+        # Clear the workspace directory so that we don't run into errors about
+        # existing lock files.
+        rm -rf $GITHUB_WORKSPACE/*
+
     - name: Get torch-mlir
       uses: actions/checkout@v3
       with:
