--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -449,6 +449,7 @@ cc_library(
         ":TorchMLIRTorchConversionDialect",
         "@llvm-project//mlir:Dialect",
         "@mlir-hlo//:mlir_hlo",
+        "@mlir-hlo//:transforms_passes",
     ],
 )
 
@@ -459,6 +460,9 @@ cc_library(
     ],
     hdrs = [
         "include/torch-mlir/Conversion/Passes.h",
+    ],
+    defines = [
+        "TORCH_MLIR_ENABLE_STABLEHLO",
     ],
     strip_include_prefix = "include",
     deps = [
