--- a/.github/workflows/bazelBuildAndTest.yml
+++ b/.github/workflows/bazelBuildAndTest.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         # Clear the workspace directory so that we don't run into errors about
         # existing lock files.
-        rm -rf $GITHUB_WORKSPACE/*
+        sudo rm -rf $GITHUB_WORKSPACE/*
 
     - name: Checkout torch-mlir
       uses: actions/checkout@v3
