--- a/.github/workflows/gh-pages-releases.yml
+++ b/.github/workflows/gh-pages-releases.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           # Clear the workspace directory so that we don't run into errors about
           # existing lock files.
-          rm -rf $GITHUB_WORKSPACE/*
+          sudo rm -rf $GITHUB_WORKSPACE/*
       - name: Checking out repository
         uses: actions/checkout@v3
         with:
